# mpesa_safaricom-fraud_anomaly_detection

./: CHANGELOG.md  Dockerfile  README.md  __init__.py  aggregator.py  audit_log.py  batch_reconcile.py  circuit_breaker.py  config.py  config_manager.py  dashboard_app.py  dlq.py  docker-compose.yml  engine.py  examples.py  feature_store.py  metrics.py  model_registry.py  prompt.txt  pyproject.toml  requirements-fraud.txt  requirements.txt  review_sink.py  schema_validator.py  setup.py  transport.py
checks/: base.py  ml_scorer.py  mule_correlator.py  night_flagger.py  registry.py  sim_swap_correlator.py  velocity_detector.py
dashboards/: 01_engine_performance.json  02_ingestion_health.json  03_fraud_ops_review_queue.json  04_check_performance.json  05_model_performance_drift.json  06_infrastructure_health.json  07_business_impact.json  08_data_quality.json  09_sla_alerting_summary.json
dbt/: QUICK_REFERENCE.md  README.md
dbt/macros/: safe_divide.sql
dbt/models/marts/fraud/: dim_msisdn_risk_profile.sql  fct_fraud_decisions.sql
dbt/models/marts/ops/: business_impact_mart.sql  review_queue_mart.sql
dbt/models/staging/: stg_check_results.sql  stg_review_outcomes.sql
dbt/tests/: mart_fct_fraud_decisions_unique.sql
docs/: architecture.md  data_lineage.md  deployment_runbook.md  fraud_detection.md  glossary.md  ingestion_runbook.md  integration_notes.md  model_strength_report.md  onboarding.md  operations_calendar.md  rollback_procedures.md  synthetic_data_notes.md
docs/adr/: 0001-calibrated-classifier-over-onnx.md  0002-multi-domain-orchestration.md  0003-circuit-breaker-pattern.md  0004-feature-engineering-strategy.md
ingest/: sim_swap_ingest.py
ml/: adversarial_test.py  drift_monitor.py  evaluate_model.py  features.py  generate_synthetic_transactions.py  inference.py  model_card.md  register_model.py  synthetic_transactions.parquet  train_model.py
models/run_2026-07-03_01/: mobile_money_fraud.onnx
models/run_2026-07-03_02/: mobile_money_fraud.onnx  mobile_money_fraud_calibrated.joblib
serving/: feature_store.py  model_registry.py
tests/: test_additional_checks.py  test_aggregator.py  test_checks.py  test_engine.py  test_fraud_components.py
tests/integration/: test_consumer_to_fraud.py  test_ingestion_robustness.py  test_integration_engine.py  test_webhook_metrics.py
tests/unit/: test_config_manager.py
