[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpesa-fraud-anomaly-detection"
version = "1.0.0"
description = "M-Pesa Fraud Detection & Anomaly Monitoring System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Victor Kipruto", email = "victor@example.com"}
]
keywords = ["fraud", "detection", "machine-learning", "anomaly", "monitoring", "mpesa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.1",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "shap>=0.42.0",
    "tensorflow>=2.12.0",
    "torch>=2.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.21",
    "psycopg2-binary>=2.9.9",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "streamlit>=1.27.2",
    "plotly>=5.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "prometheus-client>=0.18.0",
    "faker>=19.6.2",
    "dbt-postgres>=1.6.6",
    "pytest>=7.4.2",
    "python-json-logger>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

ml = [
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    "shap>=0.42.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "skl2onnx>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/Victor-Kipruto-Rop/victor-kipruto-rop-portfolio"
Repository = "https://github.com/Victor-Kipruto-Rop/victor-kipruto-rop-portfolio"
Issues = "https://github.com/Victor-Kipruto-Rop/victor-kipruto-rop-portfolio/issues"

[project.scripts]
fraud-detector = "fraud_anomaly_detection.cli:main"
train-fraud-model = "fraud_anomaly_detection.ml.train_model:main"
evaluate-fraud-model = "fraud_anomaly_detection.ml.evaluate_model:main"

[tool.setuptools]
packages = ["fraud_anomaly_detection"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["fraud_anomaly_detection"]
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["fraud_anomaly_detection"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
